@@ -207,3 +207,5 @@ https://www.youtube.com/watch?v=Bov8-HpO10Y
 1.21.1-1.6-Beta
 
 Do not want to use the Immersive Engineering mod? Feel free to disable it in CurseForge launcher.
+Added KubeJS Block of Raw Ores.
+Added KubeJS Raw Ores.
